links and helper text

--- a/website/index.html
+++ b/website/index.html
@@ -39,12 +39,16 @@
   </div>
 
   <dialog id="instructions-dialog">
-    <p>View working demo and starter spreadsheet at <a href="https://goo.gl/BbXhuq">goo.gl/BbXhuq</a></p>
+    <p>View <a target="_blank" href="https://ezgantt.appspot.com/#1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA">working demo and starter spreadsheet</a>.</p>
+    <p>To make your own:</p>
     <ol>
-      <li>Copy the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1ZkDfbfj3G_CONE22ap82dpgnOxQ9L33CQ5K74ZVPzrA/edit#gid=0">spreadsheet</a></li>
-      <li>Edit it, following the rules in the notes.  Especially the date and dependency rules.  And you MUST keep the word 'gantt' in the worksheet name!</li>
-      <li>View your Gantt Chart at https://ezgantt.appspot.com/<strong>#</strong>YOUR_SPREADSHEET_KEY - where the key is in the URL as you are editing the sheet.
-      https://docs.google.com/spreadsheets/d/<strong>[this part is the key]</strong>/edit  Don't forget the "#" hash!  Or just use the "ezGantt" menu in the spreadsheet.</li>
+      <li>Copy the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA/edit#gid=0">spreadsheet</a></li>
+      <li>Edit it, following the rules in the notes - especially the date and dependency rules!  Don't share it with me.  And you MUST keep the word 'gantt' in the worksheet name!</li>
+      <li>View your Gantt Chart at https://ezgantt.appspot.com/<strong>#</strong>YOUR_SPREADSHEET_KEY
+      <i>(where the key is
+      https://docs.google.com/spreadsheets/d/<strong>[this part is the key]</strong>/edit
+      Don't forget the "#" hash!</i>
+      Better still, use the "ezGantt" menu in the spreadsheet.</li>
     </ol>
     <button id="close-instructions" class="mdl-button mdl-js-button mdl-js-ripple-effect">got it</button>
   </dialog>
