--- a/website/index.html
+++ b/website/index.html
@@ -9,9 +9,12 @@
   <link rel="stylesheet" href="//www.gstatic.com/external_hosted/material_design_lite/mdl_css-blue_grey-light_blue-bundle.css">
   <script src="//www.gstatic.com/external_hosted/material_design_lite/mdl_all_js_compiled.js"></script>
 
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://apis.google.com/js/platform:auth2:client.js"></script>
+
   <script src="js/auth.js"></script>
   <script src="js/ezgantt.js"></script>
-  <script async src="https://apis.google.com/js/platform:auth2:client.js" onload="platformLoaded()"></script>
+  
   
   <style>
     #chart_div {
