--- a/website/index.html
+++ b/website/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="data:;base64,iVBORw0KGgo=">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link href="data:;base64,iVBORw0KGgo=" rel="shortcut icon">
 
-  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="//www.gstatic.com/external_hosted/material_design_lite/mdl_css-blue_grey-light_blue-bundle.css">
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//www.gstatic.com/external_hosted/material_design_lite/mdl_css-blue_grey-light_blue-bundle.css" rel="stylesheet">
   <script src="//www.gstatic.com/external_hosted/material_design_lite/mdl_all_js_compiled.js"></script>
 
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
   <script src="https://apis.google.com/js/api.js"></script>
 
   <script src="js/auth.js"></script>
   <script src="js/ezgantt.js"></script>
-  
-  
+
+
   <style>
     #chart_div {
       height: 8000px;
@@ -27,42 +27,51 @@
 </head>
 
 <body>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title" id="pageTitle">Easy Gantt Chart</span>
-        <div class="mdl-layout-spacer"></div>
-        <a id="sheet" class="mdl-navigation__link" target="_blank" href="">Edit</a>
-      </div>
-    </header>
-    <main class="mdl-layout__content">
-      <div class="page-content">
-        <div id="chart_div"></div>
-      </div>
-    </main>
-  </div>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title" id="pageTitle">Easy Gantt Chart</span>
+      <div class="mdl-layout-spacer"></div>
+      <a class="mdl-navigation__link" href="" id="sheet" target="_blank">Edit</a>
+    </div>
+  </header>
+  <main class="mdl-layout__content">
+    <div class="page-content">
+      <div id="chart_div"></div>
+    </div>
+  </main>
+</div>
 
-  <dialog id="instructions-dialog">
-    <p>View <a target="_blank" href="/#1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA">working demo and starter spreadsheet</a>.</p>
-    <p>To make your own:</p>
-    <ol>
-      <li>Copy the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA/edit#gid=0">spreadsheet</a>, be sure NOT to share it with me!</li>
-      <li>Edit it, following the rules in the notes - especially the date and dependency rules!
-        <ol>
-          <li>Every Task needs <strong>exactly two</strong> of these fields: a 'Start Date', 'End Date', 'Duration', 'Dependencies'</li>
-          <li>Add a "#" in your TaskName if you want to add rows to your worksheet with "comments" that don't affect the Gantt Chart </li>
-          <li>You MUST keep the word 'gantt' in the worksheet name! Feel free to add more worksheet tabs, but the 'gantt' tab will be used for the Gantt Chart.</li>
-        </ol>
-      </li>
-      <li>View your Gantt Chart with the "ezGantt" menu in the spreadsheet (or at https://ezgantt.appspot.com/<strong>#</strong>YOUR_SPREADSHEET_KEY <i>(where the key is https://docs.google.com/spreadsheets/d/<strong>[this part is the key]</strong>/edit -- Don't forget the "#" hash!)</i> </li>
-    </ol>
-  </dialog>
-  
+<dialog id="instructions-dialog">
+  <p>View <a href="/#1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA" target="_blank">working demo and starter spreadsheet</a>.</p>
+  <p>To make your own:</p>
+  <ol>
+    <li>Copy the <a href="https://docs.google.com/spreadsheets/d/1kYfoEFXW-psZ8AMy0Ne7wRMiM3umNKBs3v9U7nvafXA/edit#gid=0" target="_blank">spreadsheet</a>, be sure NOT to share it
+      with me!</li>
+    <li>Edit it, following the rules in the notes - especially the date and dependency rules!
+      <ol>
+        <li>Every Task needs <strong>exactly two</strong> of these fields: a 'Start Date', 'End Date', 'Duration', 'Dependencies'</li>
+        <li>Add a "#" in your TaskName if you want to add rows to your worksheet with "comments" that don't affect the Gantt Chart </li>
+        <li>You MUST keep the word 'gantt' in the worksheet name! Feel free to add more worksheet tabs, but the 'gantt' tab will be used for the Gantt Chart.</li>
+      </ol>
+    </li>
+    <li>View your Gantt Chart with the "ezGantt" menu in the spreadsheet (or at https://ezgantt.appspot.com/<strong>#</strong>YOUR_SPREADSHEET_KEY <i>(where the key is
+      https://docs.google.com/spreadsheets/d/<strong>[this part is the key]</strong>/edit -- Don't forget the "#" hash!)</i> </li>
+  </ol>
+</dialog>
+
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-68216614-5', 'auto');
   ga('send', 'pageview');
