--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownAnchorTarget -->
 <html lang="en-US">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68216614-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'UA-68216614-5');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link href="data:;base64,iVBORw0KGgo=" rel="shortcut icon">
@@ -12,9 +26,7 @@
   <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
   <script src="https://apis.google.com/js/api.js"></script>
 
-  <script src="js/auth.js"></script>
-  <script src="js/ezgantt.js"></script>
-
+  <script type="module" src="js/ezgantt.js"></script>
 
   <style>
     #chart_div {
@@ -59,24 +71,6 @@
       https://docs.google.com/spreadsheets/d/<strong>[this part is the key]</strong>/edit -- Don't forget the "#" hash!)</i> </li>
   </ol>
 </dialog>
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-  ga('create', 'UA-68216614-5', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
